Fixed a mistake with a funky alignment of the logo buttons

--- a/RushdownResortStyle.css
+++ b/RushdownResortStyle.css
@@ -32,3 +32,6 @@ html{
     display:inline-block;
     margin-left:20px;
 }
+div{
+    padding:1px;
+}
